2016-09-25

  Released 0.1
  Initial check-in of gdeltPyR


2016-10-23
  Working on 0.1 release, basic functionality all there