@@ -1,0 +1,3 @@
+[bdist_wheel]
+#works with Python 2 and Python 3
+universal=1
